--- a/To_Do_List/style.css
+++ b/To_Do_List/style.css
@@ -51,14 +51,32 @@ header {
     appearance: none;
 }
 
-.needTodo h2 {
+h2 {
     text-align: center;
     margin-bottom: .5em;
     font-size: 3em;
     color: rgb(199, 140, 241);
 }
+.needTodo{
+    text-align: center;
+}
 
-.needTodo input {
+/* .needTodo .do{
+    border: 2px solid black;
+    border-radius: 20px;
+    margin: 16px 8em 0 1em ;
+    background: white;
+    color: black;
+    padding: .5em 4em;
+
+    /* margin: 0 0 2em 3em;
+    padding: .5em 4em;
+    border-radius: 20px;
+    text-align: center;
+    line-height: 10px; */
+} */
+
+.required {
     margin: 0 0 2em 3em;
     padding: .5em 4em;
     appearance: none;
@@ -66,11 +84,11 @@ header {
     text-align: center;
 }
 
-.needTodo .delete{
-    font-size: 1.5rem;
-    padding: .5 1em 1em;
-    margin-left: 1em;
-    width: 4em;
+.delete{
+    /* position:absolute;
+    left: 38em; */
+    font-size: 1.5em;
+    margin-right: 5em;
     border-radius: 2rem;
     appearance: none;
 }
