--- a/To_Do_List/style.css
+++ b/To_Do_List/style.css
@@ -74,8 +74,8 @@ h2 {
     border-radius: 20px;
     text-align: center;
     line-height: 10px; */
-} */
-
+/* }  */
+/* 
 .required {
     margin: 0 0 2em 3em;
     padding: .5em 4em;
@@ -85,10 +85,27 @@ h2 {
 }
 
 .delete{
-    /* position:absolute;
-    left: 38em; */
+    position:absolute;
+    left: 38em;
     font-size: 1.5em;
     margin-right: 5em;
     border-radius: 2rem;
     appearance: none;
+/* }  */
+
+
+.do input {
+    margin: 1em 0 2em 1em;
+    padding: .5em 4em;
+    appearance: none;
+    border-radius: 20px;
+}
+
+.needTodo .delete{
+    font-size: 1.5rem;
+    padding: .2em .2em .2em .2em;
+    margin-left: 1em;
+    border-radius: 2em;
+    appearance: none;
+   
 }
